# RegScope

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LICENSE  Makefile  NOTICE  PRIVACY.md  README.md  SECURITY.md  TERMS_OF_USE.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: architect.md  ci-doctor.md  code-review.md
.claude/commands/: fix-ci.md  ship.md
.claude/rules/: architecture.md  data-pipeline.md  git-workflow.md  nlp.md  python.md
.claude/skills/: check.md  pr.md  pre-push-checklist.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: auto-pr-description.yml  claude-review.yml  codeql.yml  commit-message-check.yml  pr-gate.yml  pr-validate-title.yml  security.yml
api/: __init__.py  config.py  deps.py  logging_setup.py  main.py
api/models/: __init__.py  astroturf.py  clusters.py  comments.py  dockets.py  documents.py  graph.py  query.py
api/routes/: __init__.py  astroturf.py  clusters.py  comments.py  dockets.py  documents.py  graph.py  health.py  query.py
data/: __init__.py  validation.py
data/ingest/: __init__.py  federal_register.py  raw_schema.py  regulations_gov.py  writer.py
data/process/: __init__.py  clean.py
db/: __init__.py  init_db.py  queries.py
db/migrations/: 001_initial.sql  002_cluster_labels.sql  003_citations.sql  004_documents.sql
docs/: ARCHITECTURE.md  BRANCH_PROTECTION.md  DECISIONS.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/tests/: App.test.tsx  AstroturfPage.test.tsx  ClustersPage.test.tsx  DocketSearch.test.tsx  DocketsPage.test.tsx  GraphPage.test.tsx  QueryPage.test.tsx  SummaryCard.test.tsx  setup.ts
nlp/: __init__.py  citations.py  cluster.py  dedup.py  embed.py  rag.py  summarize.py
scripts/: __init__.py  pipeline.py  seed_data.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_api_astroturf.py  test_api_clusters.py  test_api_comments.py  test_api_dockets.py  test_api_graph.py  test_api_query.py
(+35 files in other folders)
