[project]
name = "regscope"
version = "0.1.0"
description = "AI-powered Federal Register regulatory intelligence platform"
requires-python = ">=3.13"
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "duckdb>=1.1.0",
    "polars>=1.0.0",
    "pyarrow>=17.0.0",
    "sentence-transformers>=3.0.0",
    "hdbscan>=0.8.38",
    "datasketch>=1.6.0",
    "spacy>=3.7.0",
    "litellm>=1.50.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "networkx>=3.3",
    "python-dotenv>=1.0.0",
    "pytz>=2024.1",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "pre-commit>=3.8.0",
    "factory-boy>=3.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "TCH",    # type-checking imports
    "RUF",    # ruff-specific rules
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"api/routes/*.py" = ["TCH"]

[tool.ruff.lint.isort]
known-first-party = ["data", "nlp", "api", "db"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "duckdb",
    "hdbscan",
    "datasketch",
    "spacy",
    "sentence_transformers",
    "networkx",
    "litellm",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=data --cov=nlp --cov=api --cov=db --cov-report=term-missing --cov-fail-under=70"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["data", "nlp", "api", "db"]
omit = ["tests/*", "scripts/*"]
